# ri-notify-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  ri_notify.py  settings.conf.ini
